syntax = "proto3";

package cash_proto;

option go_package = "github.com/sardorgo/app/proto/cash_proto";

service Cash {
    rpc CreateCash (CreateCashRequest) returns (CashProfile) {}
}

message CashProfile {
    string id = 1;
    int64 amount = 2;
    string summary = 3;
    string user_id = 4;
}

message CreateCashRequest {
    CashProfile cash_profile = 1;
}




